--- a/localization/ru.xml
+++ b/localization/ru.xml
@@ -97,6 +97,7 @@
     <AddAllColumns>Добавить все колонки</AddAllColumns>
     <Attach>Прикрепить</Attach>
     <Build>Построить...</Build>
+    <Buttons>Кнопки</Buttons>
     <Cancel>&amp;Отмена</Cancel>
     <Check>Проверить</Check>
     <Close>Закрыть</Close>
@@ -130,6 +131,7 @@
     <SetAll>Установить все</SetAll>
     <ShowLess>Показать меньше</ShowLess>
     <ShowMore>Показать больше</ShowMore>
+    <ShowSpecific>Показывать '{0}'</ShowSpecific>
     <Submit>Применить</Submit>
     <Test>Проверка</Test>
     <Up>Вверх</Up>
@@ -332,6 +334,7 @@
     <AcceptTermsAndPrivacyPolicy>Я ознакомился с {0}, {1} и принимаю условия.</AcceptTermsAndPrivacyPolicy>
     <AccountSettings>Настройки аккаунта</AccountSettings>
     <AddAPlace>Добавление места</AddAPlace>
+    <AreYouSureYouWantDeleteReport>Вы действительно хотите удалить отчет "{0}" с диска?</AreYouSureYouWantDeleteReport>
     <ButtonChangePassword>Изменить пароль</ButtonChangePassword>
     <ButtonDeleteAll>Удалить все</ButtonDeleteAll>
     <ButtonDesign>Редактировать отчет</ButtonDesign>
@@ -904,6 +907,7 @@
     <NoMoreThan>Не больше чем</NoMoreThan>
     <OpenAfterExport>Открыть после экспорта</OpenAfterExport>
     <PdfACompliance>PDF/A соглашение</PdfACompliance>
+    <PrintingReport>Печать отчета</PrintingReport>
     <RemoveEmptySpaceAtBottom>Убрать пустое место внизу страницы</RemoveEmptySpaceAtBottom>
     <RestrictEditing>Ограничение Редактирования:</RestrictEditing>
     <Scale>Масштаб:</Scale>
@@ -1283,6 +1287,7 @@
   <FormGlobalizationEditor>
     <AddCulture>&amp;Добавить культуру</AddCulture>
     <AutoLocalizeReportOnRun>Автоперевод отчета при старте</AutoLocalizeReportOnRun>
+    <CreateNewCulture>чтобы создать новую культуру</CreateNewCulture>
     <GetCulture>Взять настройки культуры из отчета</GetCulture>
     <qnGetCulture>Вы действительно хотите взять настройки культуры из отчета и стереть?</qnGetCulture>
     <qnSetCulture>Вы действительно хотите установить настройки культуры в компоненты отчета?</qnSetCulture>
@@ -1427,11 +1432,14 @@
     <CreateStyleCollection>Создать коллекцию стилей</CreateStyleCollection>
     <CreateStylesCollection>Создать коллекцию стилей</CreateStylesCollection>
     <CreateStylesFromColor>Создать стиль из выбранного цвета</CreateStylesFromColor>
-    <CreateNewComponentStyle>чтобы создать новый стиль компонента</CreateNewComponentStyle>
     <Duplicate>Копировать стиль</Duplicate>
+    <EditColors>[Изменить цвета]</EditColors>
+    <FromStyle>Из стиля</FromStyle>
     <GetStyle>Создать стиль на основе выделенных компонентов</GetStyle>
     <MoreStyles>Больше стилей</MoreStyles>
+    <NotSpecified>Не указано</NotSpecified>
     <Open>Открыть стили</Open>
+    <Predefined>Предопределенные</Predefined>
     <qnApplyStyleCollection>Вы действительно хотите применить коллекцию стилей к компонентам отчета?</qnApplyStyleCollection>
     <Remove>Удалить стиль</Remove>
     <RemoveExistingStyles>Удалить текущие стили</RemoveExistingStyles>
@@ -1763,6 +1771,7 @@
     <CopyStyle>Копировать стиль</CopyStyle>
     <CopyToClipboard>Скопировать в буфер обмена</CopyToClipboard>
     <CurrencySymbol>Выбрать символ валюты.</CurrencySymbol>
+    <DashboardNew>Создать новую панель индикаторов.</DashboardNew>
     <DataStore>Показать данные, зарегистрированные для отчета.</DataStore>
     <DateTimeFormat>Выбрать формат даты и времени для выделенных компонентов.</DateTimeFormat>
     <DockingPanels>Настройки панели.</DockingPanels>
@@ -2274,6 +2283,7 @@
     <SnapshotAlreadyProcessed>Снимок отчета уже обработан!</SnapshotAlreadyProcessed>
     <SpecifiedItemIsNot>Указанный элемент не "{0}"!</SpecifiedItemIsNot>
     <SubscriptionExpired>Срок действия Вашей подписки истек!</SubscriptionExpired>
+    <SubscriptionExpiredDate>Срок действия Вашей подписки истечет {0}</SubscriptionExpiredDate>
     <SubscriptionsOut10>10 дней осталось, до завершения срока действия подписки!</SubscriptionsOut10>
     <SubscriptionsOut20>Срок действия подписки истекает через 20 дней!</SubscriptionsOut20>
     <SuccessfullyRenewed>Ваша подписка была успешно обновлена!</SuccessfullyRenewed>
@@ -2993,6 +3003,8 @@
     <StiShowYAxisBoth>Обе</StiShowYAxisBoth>
     <StiShowYAxisCenter>По центру</StiShowYAxisCenter>
     <StiShowYAxisLeft>Левая</StiShowYAxisLeft>
+    <StiSizeModeAutoSize>Авторазмер</StiSizeModeAutoSize>
+    <StiSizeModeFit>Поместить</StiSizeModeFit>
     <StiSortDirectionAsc>По возрастанию</StiSortDirectionAsc>
     <StiSortDirectionDesc>По убыванию</StiSortDirectionDesc>
     <StiSortDirectionNone>Не сортировать</StiSortDirectionNone>
@@ -3125,6 +3137,7 @@
     <ProcessCellEvent>Обработка ячейки</ProcessCellEvent>
     <ProcessChartEvent>Обработка диаграммы</ProcessChartEvent>
     <RenderingEvent>Построение</RenderingEvent>
+    <ReportCacheProcessingEvent>Обработка кэша отчета</ReportCacheProcessingEvent>
     <SelectedIndexChangedEvent>Изменение индекса</SelectedIndexChangedEvent>
     <StateRestoreEvent>Восстановление состояния</StateRestoreEvent>
     <StateSaveEvent>Сохранение состояния</StateSaveEvent>
@@ -3325,6 +3338,7 @@
     <ColorDataColumn>Колонка данных цветов</ColorDataColumn>
     <ColorEach>Цвет для каждого</ColorEach>
     <ColorMeter>Цвет</ColorMeter>
+    <Colors>Цвета</Colors>
     <ColorScaleCondition>Цветовая шкала</ColorScaleCondition>
     <ColorScaleType>Тип цветовой шкалы</ColorScaleType>
     <Column>Колонка</Column>
@@ -3364,9 +3378,11 @@
     <DataAdapters>Адаптеры данных</DataAdapters>
     <DataBarCondition>Гистограмма</DataBarCondition>
     <DataBindings>Связывание данных</DataBindings>
+    <DataColor>Цвет данных</DataColor>
     <DataColumn>Колонка данных</DataColumn>
     <DataColumns>Колонки данных</DataColumns>
     <DataField>Поле данных</DataField>
+    <DataForeground>Цвет текста данных </DataForeground>
     <DataRelation>Связь</DataRelation>
     <DataRows>Строки данных</DataRows>
     <DataSource>Источник данных</DataSource>
@@ -3472,6 +3488,8 @@
     <FooterCanBreak>Итог может разрываться</FooterCanBreak>
     <FooterCanGrow>Итог может расти</FooterCanGrow>
     <FooterCanShrink>Итог может сжиматься</FooterCanShrink>
+    <FooterColor>Цвет итога</FooterColor>
+    <FooterForeground>Цвет текста итога</FooterForeground>
     <FooterPrintAtBottom>Итог печатать внизу</FooterPrintAtBottom>
     <FooterPrintIfEmpty>Итог печатать, если нет данных</FooterPrintIfEmpty>
     <FooterPrintOn>Итог печатать на</FooterPrintOn>
@@ -3487,6 +3505,7 @@
     <Functions>Функции</Functions>
     <GlobalizationStrings>Строки перевода</GlobalizationStrings>
     <GlobalizedName>Глобализация</GlobalizedName>
+    <GridColor>Цвет сетки</GridColor>
     <GridLineColor>Цвет линии сетки</GridLineColor>
     <GridLinesHor>Горизонтальные линии сетки</GridLinesHor>
     <GridLinesHorColor>Цвет горизонтальных линий сетки</GridLinesHorColor>
@@ -3503,8 +3522,10 @@
     <HeaderCanBreak>Заголовок может разрываться</HeaderCanBreak>
     <HeaderCanGrow>Заголовок может расти</HeaderCanGrow>
     <HeaderCanShrink>Заголовок может сжиматься</HeaderCanShrink>
+    <HeaderColor>Цвет заголовка</HeaderColor>
     <HeaderFont>Шрифт заголовка</HeaderFont>
     <HeaderForeColor>Цвет текста заголовка</HeaderForeColor>
+    <HeaderForeground>Цвет текста заголовка</HeaderForeground>
     <HeaderPrintAtBottom>Заголовок печатать внизу</HeaderPrintAtBottom>
     <HeaderPrintIfEmpty>Заголовок печатать если нет данных</HeaderPrintIfEmpty>
     <HeaderPrintOn>Заголовок печатать на</HeaderPrintOn>
@@ -3513,6 +3534,7 @@
     <HeaderRowsCount>Количество строк заголовка</HeaderRowsCount>
     <Headers>Заголовки</Headers>
     <HeaderText>Текст заголовка</HeaderText>
+    <HeatmapColors>Цвета температурной карты</HeatmapColors>
     <Height>Высота</Height>
     <HideSeriesWithEmptyTitle>Прятать ряды с пустыми заголовками</HideSeriesWithEmptyTitle>
     <HideZeros>Скрывать нулевые значения</HideZeros>
@@ -3545,6 +3567,7 @@
     <ImportRelations>Импорт связей</ImportRelations>
     <Increment>Приращение</Increment>
     <Indent>Отступ</Indent>
+    <IndividualColor>Индивидуальный цвет</IndividualColor>
     <InfographicsTitle>Заголовок</InfographicsTitle>
     <InitBy>Инициализировать</InitBy>
     <InitialSelection>Первоначальный выбор</InitialSelection>
@@ -3580,14 +3603,17 @@
     <Keys>Ключи</Keys>
     <Label>Метка</Label>
     <LabelColor>Цвет заголовка</LabelColor>
+    <LabelForeground>Цвет текста надписи</LabelForeground>
     <LabelRotationMode>Режим поворота подписей</LabelRotationMode>
     <Labels>Заголовки</Labels>
     <LabelsColor>Цвет заголовков</LabelsColor>
+    <LabelShadowForeground>Цвет тени текста надписи</LabelShadowForeground>
     <LabelsOffset>Смещение заголовка</LabelsOffset>
     <Language>Язык</Language>
     <LargeHeight>Большая высота</LargeHeight>
     <LargeHeightFactor>Коэффициент большой высоты</LargeHeightFactor>
     <Latitude>Широта</Latitude>
+    <Layout>Размещение</Layout>
     <Left>Слева</Left>
     <LeftSide>Левая сторона</LeftSide>
     <Legend>Легенда</Legend>
@@ -3828,6 +3854,7 @@
     <SeriesLabelsBorderColor>Цвет границы</SeriesLabelsBorderColor>
     <SeriesLabelsBrush>Кисть подписей</SeriesLabelsBrush>
     <SeriesLabelsColor>Цвет подписей</SeriesLabelsColor>
+    <SeriesLabelsLineColor>Цвет линии в подписи</SeriesLabelsLineColor>
     <SeriesLighting>Освещение рядов</SeriesLighting>
     <SeriesShowShadow>Отображение тени рядов</SeriesShowShadow>
     <SeriesTitle>Заголовок серии</SeriesTitle>
@@ -4498,6 +4525,7 @@
     <MasterDetailReport>Master-Detail отчет</MasterDetailReport>
     <NoFunction>[Нет]</NoFunction>
     <OpenExistingReport>Открыть файл</OpenExistingReport>
+    <OpenFrom>Открыть из {0}</OpenFrom>
     <Preview>Предварительный просмотр</Preview>
     <Reset>&amp;Сбросить</Reset>
     <Results>Результаты</Results>
